# seismic-alloy-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml  deps.yml  seismic.yml
crates/core/: Cargo.toml
crates/dyn-abi/: Cargo.toml
crates/dyn-abi/src/: arbitrary.rs  coerce.rs  specifier.rs
crates/dyn-abi/src/dynamic/: ty.rs  value.rs
crates/dyn-abi/src/eip712/: coerce.rs  typed_data.rs
crates/json-abi/: Cargo.toml
crates/json-abi/tests/: abi.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: aliases.rs  flagged_storage.rs  lib.rs  postgres.rs
crates/primitives/src/signed/: int.rs
crates/primitives/src/state/: mod.rs
crates/primitives/src/storage/: flagged_storage.rs  mod.rs  storage_slot.rs
crates/primitives/src/utils/: units.rs
crates/seismic-transaction/: Cargo.toml
crates/seismic-transaction/src/: encoding_decoding.rs  lib.rs  seismic_util.rs  transaction.rs  transaction_request.rs  types.rs
crates/sol-macro/: Cargo.toml
crates/sol-macro-expander/: Cargo.toml
crates/sol-macro-expander/src/expand/: function.rs  struct.rs  ty.rs  udt.rs
crates/sol-macro-input/: Cargo.toml
crates/sol-macro/src/: lib.rs
crates/sol-type-parser/: Cargo.toml
crates/sol-type-parser/src/: root.rs
crates/sol-types/: Cargo.toml
crates/sol-types/src/: lib.rs
crates/sol-types/src/types/: data_type.rs  data_type_seismic.rs  mod.rs  value.rs
crates/sol-types/src/types/event/: topic.rs
crates/sol-types/tests/macros/sol/: mod.rs
crates/syn-solidity/: Cargo.toml
crates/syn-solidity/src/: macros.rs
crates/syn-solidity/src/item/: function.rs
crates/syn-solidity/src/type/: mod.rs
